--- a/main.html
+++ b/main.html
@@ -15,23 +15,36 @@
 <body>
   <header>
     <div class="flex-header">
-      <h1 id="logo">UGUR</h1>
+      <h1 id="logo"><a href="#" id="links">UGUR</a></h1>
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" id="links">About</a></li>
+        <li><a href="#" id="links">Projects</a></li>
+        <li><a href="#" id="links">Contact</a></li>
       </ul>
     </div>
   </header>
   <!--SECTION-->
+  <section class="home">
     <section class="flex-intro">
       <h1>Ugur Armagan</h1>
       <h2>Chicago-based Web Developer</h2>
-      <div class="arrow">
-        <a href="#">⇊</a>
-        <p>FIND OUT MORE</p>
-      </div>
     </section>
+    <section class="arrow">
+      <a href="#" id="links">FIND OUT MORE</a>
+      <a href="#" id="links">⇊</a>
+    </section>
+  </section>
+  <section class="projects">
+    <div class="section-name">
+      <h1>PROJECTS</h1>
+    </div>
+    <section class="flex-projects">
+      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
+      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
+      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
+      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
+    </section>
+  </section>
 
 </body>
 
