--- a/main.html
+++ b/main.html
@@ -39,10 +39,10 @@
       <h1>PROJECTS</h1>
     </div>
     <section class="flex-projects">
-      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
-      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
-      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
-      <a href="#"><img src="http://via.placeholder.com/250x250"></a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
     </section>
   </section>
 
