--- a/main.html
+++ b/main.html
@@ -39,10 +39,29 @@
       <h1>PROJECTS</h1>
     </div>
     <section class="flex-projects">
-      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
-      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
-      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
-      <a href="#" id="links"><img src="http://via.placeholder.com/300x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
+      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
+    </section>
+  </section>
+  <!--ABOUT-->
+  <section class="about">
+    <h1>ABOUT ME</h1>
+    <section class="about-flex">
+      <h2>Who Am I?</h2>
+      <p>I'm currently a student at Northeastern Illinois University, where I am majoring in computer science with a concentration in programming. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>What Are My Skills?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>What's Next?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+  </section>
+
+  <section class="contact">
+    <h1>Contact</h1>
+    <section>
+
     </section>
   </section>
 
