Putting the portolio on an actual Domain

--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
       <h1>Ugur Armagan</h1>
       <h2>Chicago-based Web Developer</h2>
       <div class="buttons">
-        <form method="post" action="resume/mainresumepdf.pdf" target="_blank">
-          <button type="submit">RESUME</button>
-        </form>
-        <form method="post" action="https://github.com/Uarmagan" target="_blank">
-          <button type="submit">GITHUB</button>
-        </form>
+        <button><a href="files/Ugur-Main-Resume.pdf" id="links" target="_blank">RESUME</a></button>
+        <button><a href="https://github.com/uarmagan" target="_blank" id="links">GITHUB</a></button>
       </div>
     </section>
     <section class="arrow">
@@ -61,15 +57,15 @@
     <h1>ABOUT ME</h1>
     <section class="about-flex">
       <h2>Who Am I?</h2>
-      <p>I'm currently a student at Northeastern Illinois University, where I am majoring in computer science with a concentration in programming. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Hi, my name is Ugur (pronounce the 'U' like in Uber, but the 'G' is silent). I'm currently a student at Northeastern Illinois University, where I am majoring in computer science with a concentration in programming. I stumbled onto programming a
+        few years ago out of curiosity and curiosity formed into passion. I decided to go back to school to persue a degree in computer science and I'm set to graduate in spring 2018. On top of school, I have continually put in the hours doing algorithms
+        and projects to increase my knowledge on languages that are not taught in school. Currently, I'm looking for an internship position as a software or web developer.</p>
       <h2>What Are My Skills?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>For the front-end technologies, I am skilled in HTML5, CSS3, and have sufficient knowledge in Javascript. Additionally, for the front end libraries / frameworks I know Bootstrap and JQuery including the AJAX and JSON methadologies. For back-end
+        techonologies, I know MySQL and some PHP. In terms of object-oriented languages I have a good grasp of Java. I'm a very active learner hence I'm currently in the process of learning the MEAN stack, as well as other techonologies that will improve
+        my development in this industry. </p>
       <h2>What's Next?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>I'm working everyday towards being a proficient developer and becoming more skilled. I will be looking for a junior developer role in the beginning of 2018. For now you can see what I'm coding about on my <a href="https://github.com/uarmagan" id="links"><u>GitHub</u></a></p>
     </section>
   </section>
 
@@ -77,9 +73,11 @@
     <h1>Contact</h1>
     <section class="contact-flex">
       <h2>Let's Chat..</h2>
-      <a href="https://www.linkedin.com/in/ugur-armagan/" class="links"><span class="fa fa-linkedin"> : linkedin.com/in/ugur-armagan/</span></a>
-      <a href="mailto:ugurarmagan93@gmail.com" target="_top" class="links"><span class="fa fa-envelope"> : ugurarmagan93@gmail.com</span></a>
-      <a href="https://github.com/Uarmagan" class="links"><span class="fa fa-github"> : https://github.com/Uarmagan</span></a>
+      <div class="contact-links">
+        <a href="https://www.linkedin.com/in/ugur-armagan" class="links"><span class="fa fa-linkedin"> : linkedin.com/in/ugur-armagan/</span></a>
+        <a href="mailto:ugurarmagan93@gmail.com" target="_top" class="links"><span class="fa fa-envelope"> : ugurarmagan93@gmail.com</span></a>
+        <a href="https://github.com/Uarmagan" class="links"><span class="fa fa-github"> : https://github.com/Uarmagan</span></a>
+      </div>
     </section>
   </section>
 
