added 2 new projects along with a hover effect for projects

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <h1>PROJECTS</h1>
     </div>
     <section class="flex-projects">
-      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
-      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
+      <a href="https://uarmagan.github.io/WeatherApp-FreeCodeCamp/" id="links"><img src="img/weather.png">FreeCodeCamp Weather App</a>
+      <a href="https://uarmagan.github.io/Motivational-Quotes-Generator/" id="links"><img src="img/quotes.png">Motivational Quotes Generator</a>
       <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
       <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
     </section>
