fixed the image heights and widths

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         techonologies, I know MySQL and some PHP. In terms of object-oriented languages I have a good grasp of Java. I'm a very active learner hence I'm currently in the process of learning the MEAN stack, as well as other techonologies that will improve
         my development in this industry. </p>
       <h2>What's Next?</h2>
-      <p>I'm working everyday towards being a proficient developer and becoming more skilled. I will be looking for a junior developer role in the beginning of 2018. For now you can see what I'm coding about on my <a href="https://github.com/uarmagan" id="links"><u>GitHub</u></a></p>
+      <p>I'm working everyday towards being a proficient developer and becoming more skilled. I will be looking for a junior developer role in the beginning of 2018. For now you can see what I'm coding on my <a href="https://github.com/uarmagan" id="links"><u>GitHub</u></a></p>
     </section>
   </section>
 
