--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!--FONTS-->
   <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
   <header>
     <div class="flex-header">
-      <h1 id="logo"><a href="#home" id="links">UGUR</a></h1>
+      <h1 id="logo"><a href="#home" id="links">UA</a></h1>
       <ul>
         <li><a href="#projects" id="links">Projects</a></li>
         <li><a href="#about" id="links">About</a></li>
@@ -41,11 +41,10 @@
   </section>
   <section class="projects" id="projects">
     <div class="section-name">
-      <h1 class="offset"></h1>
       <h1>PROJECTS</h1>
     </div>
     <section class="flex-projects">
-      <a href="https://uarmagan.github.io/WeatherApp-FreeCodeCamp/" id="links"><img src="img/weather.png">FreeCodeCamp Weather App</a>
+      <a href="http://ua-yelpcamp.herokuapp.com/" id="links"><img src="img/YelpCamp.png">YelpCamp</a>
       <a href="https://uarmagan.github.io/Motivational-Quotes-Generator/" id="links"><img src="img/quotes.png">Motivational Quotes Generator</a>
       <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
       <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
@@ -53,19 +52,24 @@
   </section>
   <!--ABOUT-->
   <section class="about" id="about">
-    <h1 class="offset"></h1>
     <h1>ABOUT ME</h1>
     <section class="about-flex">
-      <h2>Who Am I?</h2>
-      <p>Hi, my name is Ugur (pronounce the 'U' like in Uber, but the 'G' is silent). I'm currently a student at Northeastern Illinois University, where I am majoring in computer science with a concentration in programming. I stumbled onto programming a
-        few years ago out of curiosity and curiosity formed into passion. I decided to go back to school to persue a degree in computer science and I'm set to graduate in spring 2018. On top of school, I have continually put in the hours doing algorithms
-        and projects to increase my knowledge on languages that are not taught in school. Currently, I'm looking for an internship position as a software or web developer.</p>
-      <h2>What Are My Skills?</h2>
-      <p>For the front-end technologies, I am skilled in HTML5, CSS3, and have sufficient knowledge in Javascript. Additionally, for the front end libraries / frameworks I know Bootstrap and JQuery including the AJAX and JSON methadologies. For back-end
-        techonologies, I know MySQL and some PHP. In terms of object-oriented languages I have a good grasp of Java. I'm a very active learner hence I'm currently in the process of learning the MEAN stack, as well as other techonologies that will improve
-        my development in this industry. </p>
-      <h2>What's Next?</h2>
-      <p>I'm working everyday towards being a proficient developer and becoming more skilled. I will be looking for a junior developer role in the beginning of 2018. For now you can see what I'm coding on my <a href="https://github.com/uarmagan" id="links"><u>GitHub</u></a></p>
+      <div class="about-left">
+        <img id="myPic" src="img/myPic.jpg" alt="a picture of myself">
+        <h2>Hi, my name<br>is Ugur</h2>
+      </div>
+      <div class="about-right">
+        <p id="preSkills">I'm a full-stack developer from Chicago. I’m passionate about code, startups and technology. Always learning, always growing, and always persuing a better way.</p>
+        <dl>
+          <dt>Front-end</dt>
+          <dd>HTML5, CSS3, Bootstrap, Javascript(ES7), Ajax, jQuery, React</dd>
+          <dt>Back-end</dt>
+          <dd>Java, NodeJS, Express, REST APIs, MongoDB, SQL</dd>
+          <dt>Testing</dt>
+          <dd>Webpack</dd>
+          <dt>Software</dt>
+          <dd>Atom, Netbeans, OS X, Windows</dd </dl>
+      </div>
     </section>
   </section>
 
