add new resume and projects. font little bigger on projects

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1>Ugur Armagan</h1>
       <h2>Chicago-based Web Developer</h2>
       <div class="buttons">
-        <button><a href="files/Ugur-Main-Resume.pdf" id="links" target="_blank">RESUME</a></button>
+        <button><a href="files/UgurResume2018.pdf" id="links" target="_blank">RESUME</a></button>
         <button><a href="https://github.com/uarmagan" target="_blank" id="links">GITHUB</a></button>
       </div>
     </section>
@@ -44,10 +44,10 @@
       <h1>PROJECTS</h1>
     </div>
     <section class="flex-projects">
-      <a href="http://ua-yelpcamp.herokuapp.com/" id="links"><img src="img/YelpCamp.png">YelpCamp</a>
+      <a href="http://ua-yelpcamp.herokuapp.com/" id="links"><img src="img/YelpCamp.png">Yelp Camp</a>
+      <a href="http://ua-yelpcamp.herokuapp.com/" id="links"><img src="img/emaily.png">Emaily</a>
       <a href="https://uarmagan.github.io/Motivational-Quotes-Generator/" id="links"><img src="img/quotes.png">Motivational Quotes Generator</a>
-      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
-      <a href="#" id="links"><img src="http://via.placeholder.com/400x300">placeholder Project</a>
+      <a href="https://uarmagan.github.io/WeatherApp-FreeCodeCamp/" id="links"><img src="img/weather.png">FreeCodeCamp Weather App</a>
     </section>
   </section>
   <!--ABOUT-->
@@ -62,13 +62,14 @@
         <p id="preSkills">I'm a full-stack developer from Chicago. I’m passionate about code, startups and technology. Always learning, always growing, and always persuing a better way.</p>
         <dl>
           <dt>Front-end</dt>
-          <dd>HTML5, CSS3, Bootstrap, Javascript(ES7), Ajax, jQuery, React</dd>
+          <dd>HTML5, CSS3, Javascript(ES7), jQuery, React</dd>
           <dt>Back-end</dt>
-          <dd>Java, NodeJS, Express, REST APIs, MongoDB, SQL</dd>
+          <dd>Java, NodeJS, Express, MongoDB, SQL, REST APIs </dd>
           <dt>Testing</dt>
           <dd>Webpack</dd>
           <dt>Software</dt>
-          <dd>Atom, Netbeans, OS X, Windows</dd </dl>
+          <dd>Atom, Netbeans, OS X, Windows</dd>
+        </dl>
       </div>
     </section>
   </section>
